added styles page and creating some classes in body

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Outdoor Adventure Hub</title>
 </head>
 <body>
-    
+    <div class="main-container">
+        <div class="sidebar">
+
+        </div>
+        <div class="content">
+
+        </div>
+
+    </div>
 </body>
 </html>
