added some styles to home page for the sidebar

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Outdoor Adventure Hub</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main-container">
         <div class="sidebar">
-
+          <div class="icon">
+              <img src="" alt="" class="icon-img">
+              <span class="icon-name">HOME</span>
+          </div>
         </div>
         <div class="content">
-
+           <h1>Outdoor Adventure Hub</h1>
         </div>
-
     </div>
 </body>
 </html>
