--- a/index.html
+++ b/index.html
@@ -10,9 +10,21 @@
     <div class="main-container">
         <div class="sidebar">
           <div class="icon">
-              <img src="" alt="" class="icon-img">
+              <img src="img/home.png" alt="home" class="icon-img">
               <span class="icon-name">HOME</span>
           </div>
+          <div class="icon">
+            <img src="img/destination.png" alt="destination" class="icon-img">
+            <span class="icon-name">Destinations</span>
+          </div>
+          <div class="icon">
+            <img src="img/gear guide.png" alt="gear guide" class="icon-img">
+            <span class="icon-name">Gear Guide</span>
+         </div>
+         <div class="icon">
+            <img src="img/activites.png" alt="activites" class="icon-img">
+            <span class="icon-name">Activities</span>
+         </div>
         </div>
         <div class="content">
            <h1>Outdoor Adventure Hub</h1>
