sidebar and navebar aaded to all pages

--- a/act.html
+++ b/act.html
@@ -10,33 +10,33 @@
     <div class="main-container">
         <div class="navbar"> 
             <a class="icon" href="index.html">
-                <img src="img/home.png" alt="home" class="icon-img">
+                <img src="./../img/home.png" alt="home" class="icon-img">
             </a> 
-            <a class="icon" href="dest.html">
-                <img src="img/destination.png" alt="destination" class="icon-img">
+            <a class="icon" href="./pages/dest.html">
+                <img src="./../img/destination.png" alt="destination" class="icon-img">
             </a> 
-            <a class="icon" href="gear.html">
-                <img src="img/gear guide.png" alt="gear guide" class="icon-img">
+            <a class="icon" href="./pages/gear.html">
+                <img src="./../img/gear guide.png" alt="gear guide" class="icon-img">
             </a> 
-            <a class="icon" href="act.html">
-                <img src="img/activites.png" alt="activites" class="icon-img">
+            <a class="icon" href="./pages/act.html">
+                <img src="./../img/activites.png" alt="activites" class="icon-img">
             </a>
         </div>
         <div class="sidebar">
           <a class="icon" href="index.html">
-              <img src="img/home.png" alt="home" class="icon-img">
+              <img src="./../img/home.png" alt="home" class="icon-img">
               <span class="icon-name">HOME</span>
           </a>
           <a class="icon" href="dest.html">
-            <img src="img/destination.png" alt="destination" class="icon-img">
+            <img src="./../img/destination.png" alt="destination" class="icon-img">
             <span class="icon-name">Destinations</span>
           </a>
           <a class="icon" href="gear.html">
-            <img src="img/gear guide.png" alt="gear guide" class="icon-img">
+            <img src="./../img/gear guide.png" alt="gear guide" class="icon-img">
             <span class="icon-name">Gear Guide</span>
           </a>
          <a class="icon" href="act.html">
-            <img src="img/activites.png" alt="activites" class="icon-img">
+            <img src="./../img/activites.png" alt="activites" class="icon-img">
             <span class="icon-name">Activities</span>
          </a>
         </div>
