final style completed and webpage is ready

--- a/act.html
+++ b/act.html
@@ -42,6 +42,12 @@
         </div>
         <div class="content">
            <h1 class="head-name">Outdoor Adventure Hub</h1>
+           <h1 class="head-title">Unleash Your Adventurous Spirit: Explore Thrilling Outdoor Activities</h1>
+           <h2> <span class="gearh2">1.Hiking & Trekking</span> Lace up your boots and hit the trails! Discover scenic hiking routes, from leisurely nature walks to challenging summit climbs. Explore towering mountains, lush forests, and rugged coastlines while immersing yourself in the beauty of nature.</h2>
+            <h2><span class="gearh2">2.Rock Climbing:</span> Reach new heights and conquer vertical challenges with rock climbing adventures. Test your strength, agility, and problem-solving skills as you ascend cliffs, crags, and boulders in breathtaking outdoor settings. Whether you're a beginner or an experienced climber, there's a route waiting for you.</h2>
+            <h2><span class="gearh2">3.Camping & Backpacking:</span> Immerse yourself in the tranquility of the wilderness with camping and backpacking adventures. Set up camp beneath the stars, cook meals over a crackling campfire, and fall asleep to the soothing sounds of nature. Whether you prefer car camping or backcountry backpacking, the great outdoors awaits.</h2> 
+             <h2><span class="gearh2">4.Kayaking & Canoeing:</span> Paddle your way through scenic waterways and explore hidden gems only accessible by boat. Glide across tranquil lakes, meandering rivers, and coastal estuaries while admiring stunning landscapes and wildlife sightings along the way. Kayaking and canoeing offer a unique perspective on outdoor adventure.</h2>   
+             <h2><span class="gearh2">5.Wildlife Watching & Photography:</span>Connect with nature and observe wildlife in its natural habitat. Grab your camera and embark on wildlife watching and photography excursions to capture stunning images of birds, mammals, and other creatures in their native environments. Exercise patience and respect for the natural world as you seek out elusive wildlife sightings.</h2>
         </div>
     </div>
 </body>
