--- a/dest.html
+++ b/dest.html
@@ -42,6 +42,21 @@
         </div>
         <div class="content">
            <h1 class="head-name">Outdoor Adventure Hub</h1>
+           <h2 class="head-title">Discover Your Next Adventure Destination</h2>
+           <table>
+            <tr>
+                <td class="td3">Mountain Majesty</td>
+                <td class="td3">Coastal Charms</td>
+                <td class="td3">Wilderness Wonders</td>
+                <td>Desert Dunes</td>
+            </tr>
+            <tr>
+                <td><img src="img/mountain.jpeg" alt="mountains" height="250px" width="300px"></td>
+                <td><img src="img/charms.jpg" alt="Coastalcharms" height="250px" width="300px"></td>
+                <td><img src="img/wild.avif" alt="Wilderness Wonders" height="250px" width="300px"></td>
+                <td><img src="img/desserts.jpeg" alt="Wilderness Wonders" height="250px" width="300px"></td>
+            </tr>
+           </table>
         </div>
     </div>
 </body>
