--- a/gear.html
+++ b/gear.html
@@ -42,6 +42,18 @@
         </div>
         <div class="content">
            <h1 class="head-name">Outdoor Adventure Hub</h1>
+           <h1 class="head-title">Essential Gear Categories</h1>
+           <h2> <span class="gearh2">1.Hiking Essentials:</span> Discover the must-have gear for hiking adventures, including sturdy hiking boots, 
+            lightweight backpacks, durable trekking poles, and moisture-wicking clothing.</h2>
+            <h2><span class="gearh2">2.Camping Gear:</span> Explore our recommendations for camping equipment, such as spacious tents, cozy sleeping 
+                bags, portable stoves, and compact cookware sets.</h2>
+            <h2><span class="gearh2">3.Outdoor Apparel:</span> Find the perfect apparel for your outdoor pursuits, from moisture-wicking base layers 
+                and insulating mid-layers to waterproof jackets and breathable hiking pants.</h2> 
+             <h2><span class="gearh2">4.Backpacking Gear:</span> Get ready for multi-day backpacking trips with our selection of lightweight and 
+                compact backpacking gear, including minimalist shelters, ultralight sleeping pads, and efficient water 
+                filtration systems.</h2>   
+             <h2><span class="gearh2">5.Climbing Equipment:</span>Equip yourself for vertical adventures with our climbing gear recommendations, 
+                including harnesses, ropes, carabiners, and climbing shoes tailored to your climbing style and skill level.</h2>   
         </div>
     </div>
 </body>
