--- a/index.html
+++ b/index.html
@@ -42,6 +42,31 @@
         </div>
         <div class="content">
            <h1 class="head-name">Outdoor Adventure Hub</h1>
+           <h2 class="head-title">Welcome to the Outdoor Adventure Hub</h2>
+           <table>
+            <tr>
+                <td class="td1">Discover Your Next Adventure</td>
+                <td class="td2">Explore breathtaking destinations, from majestic mountains to serene lakeshores 
+                    and rugged trails. Our destination guides provide insider tips, detailed maps, 
+                    and recommendations to help you plan the perfect outdoor getaway.</td>
+                    <td ><img src="img/discover.png" alt="discover" height="180px" width="280px"></td>
+            </tr>
+            <tr>
+                <td class="td1">Thrilling Activities Await</td>
+                <td class="td2">Equip yourself with the best gear for your outdoor excursions. Our comprehensive 
+                    gear reviews, expert recommendations, and buying guides ensure that you're prepared 
+                    for any adventure, whether it's a weekend camping trip or a multi-day hiking 
+                    expedition.</td>
+                    <td ><img src="img/thril.jpeg" alt="thril" height="180px" width="280px"></td>
+            </tr>
+            <tr>
+                <td class="td1">Join Our Community of Adventurers</td>
+                <td class="td2">Connect with fellow outdoor enthusiasts, share your experiences, and find 
+                    inspiration for your next expedition. Our vibrant community is here to support 
+                    and encourage you on your journey towards outdoor exploration and discovery.</td>
+                    <td ><img src="img/join.jpeg" alt="join" height="180px" width="280px"></td>
+            </tr>
+           </table>
         </div>
     </div>
 </body>
